objects/QCloudsSaaS__Instance__c.object
<CustomObject>
    <description>added from sfdx plugin</description>
    <fields>
        <fullName>QCloudsSaaS__Description__c</fullName>
        <description>Org description - Set on the Quality Clouds scan site when the instance was registered</description>
        <inlineHelpText>Org description - Set on the Quality Clouds scan site when the instance was registered</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Environment_Type__c</fullName>
        <description>Org environment type - Set on the Quality Clouds scan site when the instance was registered</description>
        <inlineHelpText>Org environment type - Set on the Quality Clouds scan site when the instance was registered</inlineHelpText>
        <label>Environment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__ID__c</fullName>
        <description>Instance id from QualityClouds</description>
        <externalId>true</externalId>
        <inlineHelpText>Instance id from QualityClouds</inlineHelpText>
        <label>ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Inst_Org_Id__c</fullName>
        <description>Id of the org that is connected to current instance</description>
        <inlineHelpText>Id of the org that is connected to current instance</inlineHelpText>
        <label>Instance Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Instance_Type__c</fullName>
        <description>SaaS Platform type</description>
        <inlineHelpText>SaaS Platform type</inlineHelpText>
        <label>Instance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__Is_Featured_Banch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Featured Banch</description>
        <inlineHelpText>Is Featured Banch</inlineHelpText>
        <label>Is Featured Banch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QCloudsSaaS__url__c</fullName>
        <description>Org URL - Detected automatically during scan. Not available for feature branch scans</description>
        <inlineHelpText>Org URL - Detected automatically during scan. Not available for feature branch scans</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Instance</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>